Finalising more comments

--- a/Amanda-workspace/Future_ERP_Income_interpolate.ipynb
+++ b/Amanda-workspace/Future_ERP_Income_interpolate.ipynb
@@ -13,7 +13,7 @@
    "id": "a1698336",
    "metadata": {},
    "source": [
-    "ERP interpolate"
+    "## ERP interpolate"
    ]
   },
   {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "2eb12fe7",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
     }
    ],
    "source": [
-    "# 1) Long-form annual ERP with a proper date\n",
+    "# Long-form annual ERP with a proper date\n",
     "erp_quarterly = (\n",
     "    population_df\n",
     "      .melt(id_vars='sa2_code', var_name='year', value_name='ERP')\n",
@@ -648,19 +648,19 @@
     "          ERP=lambda x: pd.to_numeric(x['ERP'], errors='coerce'),\n",
     "          date=lambda x: pd.to_datetime(x['year'].astype(str) + '-01-01')\n",
     "      )\n",
-    "      # if source has duplicates per (sa2_code, date), collapse them\n",
+    "      # if source has duplicates we collapse into one\n",
     "      .groupby(['sa2_code','date'], as_index=False)['ERP'].mean()\n",
     ")\n",
     "\n",
-    "# 2) Target quarterly index (quarter starts in March)\n",
+    "# Target quarterly index, Start predict from June\n",
     "q_idx = pd.date_range('2025-06-01', '2030-12-01', freq='QS-MAR')\n",
     "\n",
-    "# 3) For each SA2: union with quarterly timeline, interpolate by time, then keep quarters\n",
+    "# For each SA2: union with quarterly timeline, interpolate by time, then keep quarters\n",
     "frames = []\n",
     "for sa2, g in erp_quarterly.groupby('sa2_code', sort=False):\n",
     "    g = (g.set_index('date').sort_index())\n",
     "\n",
-    "    # build a union index so interpolate() can \"see\" the known annual points\n",
+    "    # build a union index so interpolate\n",
     "    full_idx = g.index.union(q_idx).unique().sort_values()\n",
     "\n",
     "    # reindex to union, then time-based interpolation\n",
@@ -681,7 +681,7 @@
     "      .loc[:, ['sa2_code', 'date', 'ERP']]\n",
     ")\n",
     "\n",
-    "# 1️⃣ Build a unique lookup for Suburb per SA2\n",
+    "# Build a unique lookup for Suburb per SA2\n",
     "suburb_lookup = (\n",
     "    properties_df[[\"SA2_CODE21\", \"Suburb\"]]\n",
     "    .dropna(subset=[\"SA2_CODE21\", \"Suburb\"])\n",
@@ -689,14 +689,13 @@
     "    .rename(columns={\"SA2_CODE21\": \"sa2_code\"})\n",
     ")\n",
     "\n",
-    "# 2️⃣ Merge Suburb onto ERP quarterly data\n",
+    "# Merge Suburb onto ERP quarterly data\n",
     "erp_future_quarterly = erp_future_quarterly.merge(suburb_lookup, how=\"right\", on=\"sa2_code\")\n",
     "\n",
-    "# 3️⃣ Reorder columns (optional)\n",
+    "# Reorder columns \n",
     "erp_future_quarterly = erp_future_quarterly[[\"sa2_code\", \"Suburb\", \"date\", \"ERP\"]]\n",
     "erp_future_quarterly = erp_future_quarterly.rename(columns={'sa2_code': 'SA2_CODE21'})\n",
     "\n",
-    "# ✅ Preview result\n",
     "print(erp_future_quarterly.tail(10))"
    ]
   },
@@ -705,7 +704,7 @@
    "id": "ca15220c",
    "metadata": {},
    "source": [
-    "Income Interpolate"
+    "## Income Interpolate"
    ]
   },
   {
@@ -722,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "aebb4455",
    "metadata": {},
    "outputs": [
@@ -1799,10 +1798,10 @@
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "# --- 0) Ensure sa2_code is integer early\n",
+    "# Ensure sa2_code is integer \n",
     "income_df['sa2_code'] = pd.to_numeric(income_df['sa2_code'], errors='coerce').astype('Int64')\n",
     "\n",
-    "# --- 0b) Normalise suburb name column to 'sa2_name'\n",
+    "# Normalise suburb name column to 'sa2_name'\n",
     "if 'sa2_name' in income_df.columns:\n",
     "    pass\n",
     "elif 'SA2 NAME' in income_df.columns:\n",
@@ -1811,12 +1810,12 @@
     "    # if no name column exists, create a placeholder\n",
     "    income_df['sa2_name'] = pd.NA\n",
     "\n",
-    "# --- 1) Pick predicted columns (2025–2030)\n",
+    "# Pick predicted columns (2025–2030)\n",
     "income_year_cols = [c for c in income_df.columns if re.fullmatch(r'Predicted_Income_\\d{4}', c)]\n",
     "if not income_year_cols:\n",
     "    raise ValueError(\"No columns matching 'Predicted_Income_YYYY' found.\")\n",
     "\n",
-    "# --- 2) Reshape to long format with clean year/date (carry sa2_name)\n",
+    "# Reshape to long format with clean year/date\n",
     "income_long = (\n",
     "    income_df[['sa2_code', 'sa2_name'] + income_year_cols]\n",
     "      .melt(id_vars=['sa2_code','sa2_name'], var_name='year_col', value_name='Predicted_Income')\n",
@@ -1829,11 +1828,10 @@
     "      .groupby(['sa2_code','sa2_name','date'], as_index=False)['Predicted_Income'].mean()\n",
     ")\n",
     "\n",
-    "# --- 3) Quarterly date index from 2025 → 2030\n",
+    "# Quarterly date index from 2025 → 2030\n",
     "q_idx = pd.date_range('2025-06-01', '2030-12-01', freq='QS-MAR')\n",
-    "# If you prefer starting at the first quarter boundary in 2025, use '2025-03-01'.\n",
     "\n",
-    "# --- 4) Interpolate + extrapolate quarterly\n",
+    "# Interpolate + extrapolate quarterly\n",
     "frames = []\n",
     "for (sa2, name), g in income_long.groupby(['sa2_code','sa2_name'], sort=False):\n",
     "    g = g.set_index('date').sort_index()\n",
@@ -1843,9 +1841,8 @@
     "    full_idx = g.index.union(q_idx).unique().sort_values()\n",
     "\n",
     "    gg = g.reindex(full_idx)\n",
-    "    gg = gg.infer_objects(copy=False)  # <--- fixes the warning\n",
+    "    gg = gg.infer_objects(copy=False) \n",
     "    gg['Predicted_Income'] = pd.to_numeric(gg['Predicted_Income'], errors='coerce')\n",
-    "\n",
     "    gg = gg.interpolate(method='time', limit_direction='both')\n",
     "\n",
     "\n",
@@ -1854,7 +1851,7 @@
     "    gg['sa2_name'] = name\n",
     "    frames.append(gg)\n",
     "\n",
-    "# --- 5) Combine all SA2 results\n",
+    "# Combine all SA2 results\n",
     "income_future_quarterly = (\n",
     "    pd.concat(frames, axis=0)\n",
     "      .reset_index()\n",
@@ -1862,7 +1859,7 @@
     "      .loc[:, ['sa2_code', 'sa2_name', 'date', 'Predicted_Income']]\n",
     ")\n",
     "\n",
-    "# --- 6) Confirm types\n",
+    "# Confirm types\n",
     "income_future_quarterly['sa2_code'] = income_future_quarterly['sa2_code'].astype(int)\n",
     "\n",
     "print(income_future_quarterly.head())\n",
@@ -2157,12 +2154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "1d20b6e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rename in place\n",
+    "# Rename column name\n",
     "prediction_df.rename(columns={\"SA2_CODE_2021\": \"SA2_CODE21\"}, inplace=True)"
    ]
   },
@@ -2186,18 +2183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "a6710ad6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merge on SA2 code\n",
+    "# Merge on SA2 code\n",
     "prediction_df = prediction_df.merge(\n",
     "    foi_counts_df,\n",
     "    on='SA2_CODE21',\n",
     "    how='left'   # keep all rows from foi_counts_df\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
