--- a/Amanda-workspace/income_cleaning.ipynb
+++ b/Amanda-workspace/income_cleaning.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3b3032f2",
+   "metadata": {},
+   "source": [
+    "# This notebook is for Cleaning the Income Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d388a236",
    "metadata": {},
    "source": [
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c94778c0",
    "metadata": {},
    "outputs": [],
@@ -424,10 +432,10 @@
     "# Find the row index where \"Victoria\" appears\n",
     "vic_start = income_df[income_df.iloc[:,0] == \"Victoria\"].index[0]\n",
     "\n",
-    "# Subset everything after \"Victoria\"\n",
+    "# Take everything after \"Victoria\"\n",
     "vic_df = income_df.loc[vic_start:] \n",
     "\n",
-    "# Drop rows after the next state header (e.g. \"Queensland\", \"South Australia\")\n",
+    "# Drop rows after the next state header \n",
     "state_rows = vic_df[vic_df.iloc[:,0].isin([\"Queensland\",\"South Australia\",\"Tasmania\",\"Western Australia\",\"Northern Territory\",\"Australian Capital Territory\"])]\n",
     "\n",
     "if not state_rows.empty:\n",
@@ -833,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d75fc994",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0200da8e",
    "metadata": {},
    "outputs": [
@@ -1561,8 +1569,7 @@
     "#Checking for NULL values\n",
     "vic_df.isnull().sum()\n",
     "\n",
-    "#No Null values, only 1 in the 'SA2 NAME' column \n",
-    "#which belongs to Victoria (Make sense, do not have to handle this)"
+    "#No Null values, only 1 in the 'SA2 NAME' column, which belongs to Victoria (Make sense, do not have to handle this)"
    ]
   },
   {
@@ -1969,7 +1976,7 @@
    "id": "b756d8be",
    "metadata": {},
    "source": [
-    "# Predict income for the near 2030"
+    "# Predict income for the year 2030"
    ]
   },
   {
@@ -2015,11 +2022,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c1251545",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Using Linear Regression to predict the Income\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
     "\n",
@@ -2464,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fadc8aed",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2489,7 @@
     }
    ],
    "source": [
-    "# Save to CSV if needed\n",
+    "# Save to CSV\n",
     "vic_df.to_csv('predicted_income_till_2030.csv', index=False)\n"
    ]
   }
