--- a/Amanda-workspace/income_preprocess.ipynb
+++ b/Amanda-workspace/income_preprocess.ipynb
@@ -10,17 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "07fd0c54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, root_mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "95680ec5",
    "metadata": {},
    "outputs": [
@@ -358,7 +362,7 @@
        "[523 rows x 18 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4483451f",
    "metadata": {},
    "outputs": [
@@ -397,10 +401,7 @@
    ],
    "source": [
     "med_cols = [col for col in income_df.columns if col.endswith(\".med\")]\n",
-    "\n",
-    "\n",
     "df_med_growth = income_df[med_cols].pct_change(axis=1) * 100\n",
-    "\n",
     "\n",
     "n_years = 5\n",
     "def calculate_cagr(start, end, n_years, eps=1e-9):\n",
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c30f9b9b",
    "metadata": {},
    "outputs": [
@@ -431,7 +432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Model Accuracy Comparison (Test: 2021–2022) ===\n",
+      "Model Accuracy Comparison (Test: 2021–2022)\n",
       "               Model           MAE          RMSE\n",
       "0  Linear Regression   2600.125048   2600.125048\n",
       "1               CAGR  97359.065049  97359.065049\n"
@@ -439,11 +440,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_absolute_error, root_mean_squared_error\n",
-    "\n",
     "# 1. Identify columns and years\n",
     "med_cols = [col for col in income_df.columns if col.endswith(\".med\")]\n",
     "years = np.array([int(c.split('.')[0]) for c in med_cols])\n",
@@ -462,22 +458,22 @@
     "    y = row[med_cols].values.astype(float)\n",
     "    y_dict = dict(zip(years, y))\n",
     "    \n",
-    "    # --- Train/test split\n",
+    "    # Train/test split\n",
     "    y_train = np.array([y_dict[y] for y in train_years])\n",
     "    y_test = np.array([y_dict[y] for y in test_years])\n",
     "    \n",
-    "    # --- Linear Regression ---\n",
+    "    #Linear Regression \n",
     "    model = LinearRegression()\n",
     "    model.fit(train_X, y_train)\n",
     "    y_pred_lin = model.predict(test_X)\n",
     "    \n",
-    "    # --- CAGR (from train only) ---\n",
+    "    # CAGR \n",
     "    n_train_years = train_years[-1] - train_years[0]\n",
     "    start, end = y_dict[train_years[0]], y_dict[train_years[-1]]\n",
     "    cagr = ((end / (start + 1e-9)) ** (1 / n_train_years)) - 1\n",
     "    y_pred_cagr = [end * ((1 + cagr) ** (t - train_years[-1])) for t in test_years]\n",
     "    \n",
-    "    # --- Error metrics ---\n",
+    "    # Error metrics\n",
     "    mae_lin.append(mean_absolute_error(y_test, y_pred_lin))\n",
     "    rmse_lin.append(root_mean_squared_error(y_test, y_pred_lin))\n",
     "    mae_cagr.append(mean_absolute_error(y_test, y_pred_cagr))\n",
@@ -490,7 +486,7 @@
     "    \"RMSE\": [np.mean(rmse_lin), np.mean(rmse_cagr)]\n",
     "})\n",
     "\n",
-    "print(\"=== Model Accuracy Comparison (Test: 2021–2022) ===\")\n",
+    "print(\"Model Accuracy Comparison (Test: 2021–2022)\")\n",
     "print(results)\n",
     "\n"
    ]
@@ -500,19 +496,16 @@
    "id": "98661ad4",
    "metadata": {},
    "source": [
-    "We can see that MAE and RMSE is much more smaller for LINEAR REGRESSION hence we will use linear regressionas our model"
+    "We can see that MAE and RMSE is much more smaller for LINEAR REGRESSION hence we will use linear regressions our model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9b00930b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np\n",
-    "\n",
     "years_numeric = np.array([2017, 2018, 2019, 2020, 2021, 2022]).reshape(-1, 1)\n",
     "\n",
     "# Years to predict\n",
@@ -543,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "d569cee0",
    "metadata": {},
    "outputs": [
@@ -930,7 +923,7 @@
        "[523 rows x 27 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,14 +941,6 @@
    "source": [
     "income_df.to_csv(\"income_predictions_2017_final.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b342b430",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
