--- a/ariqasri-workspace/notebooks/crime.ipynb
+++ b/ariqasri-workspace/notebooks/crime.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "7b17530c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import shape\n",
-    "import fiona"
+    "import fiona\n"
    ]
   },
   {
@@ -31,12 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "30e9b6b7",
+   "execution_count": 2,
+   "id": "85991778",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load clusters, SA2, and LGA shapefiles\n",
     "clusters_df = pd.read_csv(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/mapped_target_suburbs.csv\")\n",
     "clusters_gdf = gpd.GeoDataFrame(\n",
     "    clusters_df,\n",
@@ -44,12 +43,12 @@
     "    crs=\"EPSG:4283\"\n",
     ")\n",
     "\n",
-    "# Load SA2 and LGA boundaries (Victoria only)\n",
+    "# Load SA2 and LGA boundaries\n",
     "sa2 = gpd.read_file(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\")\n",
-    "sa2_vic = sa2[sa2[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
+    "sa2 = sa2[sa2[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
     "\n",
     "lga = gpd.read_file(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\")\n",
-    "lga_vic = lga[lga[\"STE_CODE21\"] == \"2\"].copy()\n"
+    "lga = lga[lga[\"STE_CODE21\"] == \"2\"].copy()\n"
    ]
   },
   {
@@ -62,10 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "5ea5f8a0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_22563/445084894.py:2: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
+      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
+      "\n",
+      "Left CRS: EPSG:4283\n",
+      "Right CRS: EPSG:7844\n",
+      "\n",
+      "  sa2_lga_map = gpd.sjoin(sa2, lga, how=\"left\", predicate=\"intersects\")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -155,14 +167,14 @@
        "646  POLYGON ((143.8417 -37.61597, 143.84175 -37.61...  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Join SA2 areas with LGAs\n",
-    "sa2_lga_map = gpd.sjoin(sa2_vic, lga_vic, how=\"left\", predicate=\"intersects\")\n",
+    "# map sa2s to lgas\n",
+    "sa2_lga_map = gpd.sjoin(sa2, lga, how=\"left\", predicate=\"intersects\")\n",
     "sa2_lga_map = sa2_lga_map[[\"SA2_CODE21\", \"SA2_NAME21\", \"LGA_CODE21\", \"LGA_NAME21\", \"geometry\"]].drop_duplicates()\n",
     "sa2_lga_map.head()\n",
     "\n"
@@ -178,11 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "24dee06c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Standardize LGA names (remove extra words and formatting)\n",
     "def clean_lga_name(series):\n",
     "    return (\n",
     "        series.astype(str)\n",
@@ -203,6 +216,7 @@
     "\n",
     "sa2_lga_map[\"LGA_clean\"] = clean_lga_name(sa2_lga_map[\"LGA_NAME21\"])\n",
     "\n",
+    "# Fix known naming differences (like Merri-bek)\n",
     "rename_map = {\"merri bek\": \"merri-bek\", \"moreland\": \"merri-bek\"}\n",
     "sa2_lga_map[\"LGA_clean\"] = sa2_lga_map[\"LGA_clean\"].replace(rename_map)\n"
    ]
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "0351ec25",
    "metadata": {},
    "outputs": [
@@ -316,7 +330,7 @@
        "4               17321                  6180.821302  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "b510a655",
    "metadata": {},
    "outputs": [
@@ -439,13 +453,13 @@
        "4                  3583.741605  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Detect header row and load victim data\n",
+    "# detect header row and load victim data\n",
     "temp_v = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
     "header_row_v = temp_v[temp_v.apply(lambda r: r.astype(str).str.contains(\"Year\", case=False)).any(axis=1)].index[0]\n",
     "victims = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row_v)\n",
@@ -463,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "9671747d",
    "metadata": {},
    "outputs": [],
@@ -502,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "d469b61d",
    "metadata": {},
    "outputs": [],
@@ -527,10 +541,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "8f1a93bf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_22563/2239406276.py:2: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  sa2_with_lga[\"lat\"] = sa2_with_lga.geometry.centroid.y\n",
+      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_22563/2239406276.py:3: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  sa2_with_lga[\"lng\"] = sa2_with_lga.geometry.centroid.x\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -740,7 +766,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "d9dc1146",
    "metadata": {},
    "outputs": [],
@@ -783,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "4bc1056d",
    "metadata": {},
    "outputs": [
