--- a/ariqasri-workspace/notebooks/crime.ipynb
+++ b/ariqasri-workspace/notebooks/crime.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b17530c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import shape\n",
-    "import fiona\n"
+    "import fiona"
    ]
   },
   {
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "85991778",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters_df = pd.read_csv(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/mapped_target_suburbs.csv\")\n",
+    "clusters_df = pd.read_csv(\"../../datasets/raw/mapped_target_suburbs.csv\")\n",
     "clusters_gdf = gpd.GeoDataFrame(\n",
     "    clusters_df,\n",
     "    geometry=gpd.points_from_xy(clusters_df[\"Lng\"], clusters_df[\"Lat\"]),\n",
@@ -44,10 +44,10 @@
     ")\n",
     "\n",
     "# Load SA2 and LGA boundaries\n",
-    "sa2 = gpd.read_file(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\")\n",
+    "sa2 = gpd.read_file(\"../../datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\")\n",
     "sa2 = sa2[sa2[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
     "\n",
-    "lga = gpd.read_file(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\")\n",
+    "lga = gpd.read_file(\"../../datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\")\n",
     "lga = lga[lga[\"STE_CODE21\"] == \"2\"].copy()\n"
    ]
   },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0351ec25",
    "metadata": {},
    "outputs": [
@@ -337,9 +337,9 @@
    ],
    "source": [
     "# Detect header row and load crime data\n",
-    "temp = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Criminal_Incidents_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
+    "temp = pd.read_excel(\"../../datasets/landing/Data_Tables_LGA_Criminal_Incidents_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
     "header_row = temp[temp.apply(lambda r: r.astype(str).str.contains(\"Year\", case=False)).any(axis=1)].index[0]\n",
-    "crime = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Criminal_Incidents_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row)\n",
+    "crime = pd.read_excel(\"../../datasets/landing/Data_Tables_LGA_Criminal_Incidents_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row)\n",
     "crime.columns = crime.columns.str.strip()\n",
     "crime.head()\n"
    ]
@@ -460,9 +460,9 @@
    ],
    "source": [
     "# detect header row and load victim data\n",
-    "temp_v = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
+    "temp_v = pd.read_excel(\"../../datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
     "header_row_v = temp_v[temp_v.apply(lambda r: r.astype(str).str.contains(\"Year\", case=False)).any(axis=1)].index[0]\n",
-    "victims = pd.read_excel(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row_v)\n",
+    "victims = pd.read_excel(\"../..datasets/landing/Data_Tables_LGA_Victim_Reports_Year_Ending_March_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row_v)\n",
     "victims.columns = victims.columns.str.strip()\n",
     "victims.head()"
    ]
@@ -790,12 +790,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d9dc1146",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/crime_dataset.csv\"\n",
+    "output_path = \"../../datasets/raw/crime_dataset.csv\"\n",
     "final.to_csv(output_path, index=False)"
    ]
   },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "4bc1056d",
    "metadata": {},
    "outputs": [
@@ -817,9 +817,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total missing: 13\n",
+      "missing: 13\n",
       "\n",
-      "SA2s Missing Key Data:\n",
+      "sa2s missing data\n",
       "SA2_CODE21                             SA2_NAME21         LGA_NAME21          LGA_clean\n",
       " 204011054                              Alexandra Unincorporated Vic unincorporated vic\n",
       " 204011057                       Mansfield (Vic.) Unincorporated Vic unincorporated vic\n",
@@ -839,7 +839,7 @@
    ],
    "source": [
     "missing_crime = final[final[\"CrimeRate_2025\"].isna()][[\"SA2_CODE21\", \"SA2_NAME21\", \"LGA_NAME21\", \"LGA_clean\"]]\n",
-    "print(f\"Total missing: {len(missing_crime)}\")\n",
+    "print(f\"missing: {len(missing_crime)}\")\n",
     "\n",
     "missing_report = pd.DataFrame({\n",
     "    \"missing_count\": final.isna().sum(),\n",
@@ -852,12 +852,12 @@
     "    if any(keyword in col for keyword in [\"2025\", \"CrimeRate\", \"VictimRate\", \"Incidents\", \"Victims\"])\n",
     "]\n",
     "\n",
-    "# Filter rows (SA2s) with missing values in those key columns\n",
+    "# Filter rows with missing values in those key columns\n",
     "missing_sa2s = final[final[key_cols].isna().any(axis=1)][\n",
     "    [\"SA2_CODE21\", \"SA2_NAME21\", \"LGA_NAME21\", \"LGA_clean\"] + key_cols\n",
     "]\n",
     "\n",
-    "print(\"\\nSA2s Missing Key Data:\")\n",
+    "print(\"\\nsa2s missing data\")\n",
     "display_cols = [\"SA2_CODE21\", \"SA2_NAME21\", \"LGA_NAME21\", \"LGA_clean\"]\n",
     "print(missing_sa2s[display_cols].to_string(index=False))"
    ]
