--- a/ariqasri-workspace/notebooks/demographics.ipynb
+++ b/ariqasri-workspace/notebooks/demographics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "29102303",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
     "import geopandas as gpd\n",
-    "from rapidfuzz import process, fuzz\n"
+    "from rapidfuzz import process, fuzz"
    ]
   },
   {
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "shapefile = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
+    "shapefile = \"../../datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
     "gdf = gpd.read_file(shapefile)\n",
     "vic = gdf[gdf[\"STE_CODE21\"] == \"2\"].copy()\n",
     "\n",
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3d3ea484",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load cluster centroids\n",
-    "vic = pd.read_csv(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/vic_clusters_centroids.csv\")\n",
+    "vic = pd.read_csv(\"../../datasets/raw/vic_clusters_centroids.csv\")\n",
     "\n",
     "# Cleaning setup\n",
     "DIRECTIONALS = {\"north\", \"south\", \"east\", \"west\", \"upper\", \"lower\", \"central\", \"inner\", \"outer\"}\n",
@@ -266,18 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cf5842da",
    "metadata": {},
    "outputs": [],
    "source": [
     "sa2 = gpd.read_file(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
+    "    \"../../datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
     ")\n",
     "sa2_vic = sa2[sa2[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
     "\n",
     "lga = gpd.read_file(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\"\n",
+    "    \"../../datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\"\n",
     ")\n",
     "lga_vic = lga[lga[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n"
    ]
@@ -336,13 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6c3fddf3",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_path = (\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/mapped_target_suburbs.csv\"\n",
+    "    \"../../datasets/raw/mapped_target_suburbs.csv\"\n",
     ")\n",
     "mapped_with_both.drop(columns=\"geometry\").to_csv(output_path, index=False)\n"
    ]
